# cpp_engine

./: .gitignore  CMakeLists.txt  fragmentDup.fs  lightning.cpp  main.cpp  vertex.vs
common/: Camera.h  Objects.h  shader.cpp  shader.h  stb_image.h
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
shaders/: light_fragment.shader  light_vertex.shader
shaders/ol/: fragment.fs  vertex.vs
